--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -303,13 +303,13 @@ jobs:
 
       - name: Build ${{ runner.os }} fileio binary.
         run: |
-          cargo build --bin fileio --features="env_logger" --release
+          cargo build --bin fileio --features="env_logger,indicatif" --release
         # Building on Mac currently not working (DEVINFRA-612)
         if: matrix.os.name != 'windows-2019' && matrix.os.name != 'macos-10.15'
 
       - name: Build ${{ runner.os }} fileio binary.
         run: |
-          cargo build --bin fileio --features="env_logger" --release
+          cargo build --bin fileio --features="env_logger,indicatif" --release
         env:
           LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
         if: matrix.os.name == 'windows-2019'
