--- a/.cargo/config
+++ b/.cargo/config
@@ -12,3 +12,4 @@ rustflags = [
 
 [alias]
 fileio = "run --bin fileio --no-default-features --features env_logger,indicatif --"
+settings = "run --bin piksi-settings --no-default-features --features env_logger --"
