--- a/Makefile.toml
+++ b/Makefile.toml
@@ -4,7 +4,7 @@ env_scripts = [
 # set os specific env vars
 os = os_family
 if eq ${os} windows
-  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.7-x86_64-pc-windows-msvc-shared-pgo-20211017T1616.tar.zst"
+  set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-pc-windows-msvc-shared-pgo-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
   set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
@@ -13,7 +13,7 @@ if eq ${os} windows
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
 elseif eq ${os} linux
-  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.7-x86_64-unknown-linux-gnu-pgo+lto-20211017T1616.tar.zst"
+  set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
@@ -24,7 +24,7 @@ elseif eq ${os} linux
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
 else
-  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
+  set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
@@ -47,7 +47,8 @@ skip_crate_env_info = true
 
 [env]
 WORKSPACE = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
-STANDALONE_PY_BASE_URL = "https://github.com/indygreg/python-build-standalone/releases/download/20211017"
+PY_BASE_URL = "https://github.com/indygreg/python-build-standalone/releases/download/20211017"
+SWFT_PY_BASE_URL = "https://github.com/swift-nav/python-build-standalone/releases/download/20220205%2Bswift"
 MACOSX_DEPLOYMENT_TARGET = "10.15"
 APP_NAME = "swift-console"
 
@@ -634,25 +635,62 @@ version = trim_end ${version}
 set_env VERSION ${version}
 set_env HOMEPAGE "https://www.swiftnav.com"
 set_env MAINTAINER "Swift Navigation <https://www.swiftnav.com/support>"
-set_env DESCRIPTION "The Swift Console is a Graphic User Interface (GUI) program providing visual representation of what's happening inside the Swift Navigation GNSS receivers. Console displays information and allows to adjust the settings on the hardware."
+set_env DESCRIPTION "The Swift Console provides data visualization, settings management, and update capabilities for Swift Navigation GNSS products."
 '''
 
 [tasks.dist-to-installer.linux]
 dependencies = ["dist-to-installer-env"]
-script_runner = "@shell"
+script_runner = "bash"
 script = '''
+
+set -ex
 
 if [ -d $TMP_DIR ]; then
   rm -rf $TMP_DIR
 fi
-mkdir -p $TMP_DIR/$OPT_DIR
-cp -r py39-dist/ $TMP_DIR/$OPT_DIR/$APP_DIR_NAME/
 
-mkdir -p $TMP_DIR/$USR_DIR/$APPS_DIR
-cp installers/Linux/$APP_DIR_NAME.desktop $TMP_DIR/$USR_DIR/$APPS_DIR/
-mkdir -p $TMP_DIR/$USR_DIR/$ICONS_DIR
-cp -r installers/Linux/hicolor/* $TMP_DIR/$USR_DIR/$ICONS_DIR
-fpm -t deb -s dir --depends libxcb-xinerama0 --maintainer "$MAINTAINER" --description "$DESCRIPTION" --url "$HOMEPAGE" -v $VERSION -p "${APP_DIR_NAME}_${VERSION}_linux.deb" --verbose -C $TMP_DIR -f -n $APP_DIR_NAME $OPT_DIR $USR_DIR
+mkdir -p "$TMP_DIR/$OPT_DIR"
+cp -r py39-dist/ "$TMP_DIR/$OPT_DIR/$APP_DIR_NAME/"
+
+mkdir -p "$TMP_DIR/$USR_DIR/$APPS_DIR"
+cp "installers/Linux/$APP_DIR_NAME.desktop" "$TMP_DIR/$USR_DIR/$APPS_DIR/"
+
+mkdir -p "$TMP_DIR/$USR_DIR/$ICONS_DIR"
+cp -r installers/Linux/hicolor/* "$TMP_DIR/$USR_DIR/$ICONS_DIR"
+
+DEB_PKG_DEPS="\
+  libssl1.1 \
+  libxcb1 \
+  libxcb-xkb1 \
+  libxcb-icccm4 \
+  libxcb-image0 \
+  libxcb-render-util0 \
+  libxcb-keysyms1 \
+  libxcb-xinerama0 \
+  libxkbcommon-x11-0"
+
+declare -a DEPENDS_SWITCHES
+
+for dep in $DEB_PKG_DEPS; do
+  DEPENDS_SWITCHES+=("--depends ${dep}")
+done
+
+fpm \
+  --verbose \
+  --force \
+  --input-type dir \
+  --output-type deb \
+  ${DEPENDS_SWITCHES[*]} \
+  --maintainer "$MAINTAINER" \
+  --description "$DESCRIPTION" \
+  --url "$HOMEPAGE" \
+  --version "$VERSION" \
+  --package "${APP_DIR_NAME}_${VERSION}_linux.deb" \
+  --chdir "$TMP_DIR" \
+  --name "$APP_DIR_NAME" \
+  "$OPT_DIR" \
+  "$USR_DIR"
+
 mv *.deb installers/Linux/
 '''
 
