--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -319,6 +319,18 @@ jobs:
           LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
         if: matrix.os.name == 'windows-2019'
 
+      - name: Build ${{ runner.os }} piksi-settings binary.
+        run: |
+          cargo build --bin piksi-settings --features="env_logger" --release
+        if: matrix.os.name != 'windows-2019'
+
+      - name: Build ${{ runner.os }} piksi-settings binary.
+        run: |
+          cargo build --bin piksi-settings --features="env_logger" --release
+        env:
+          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
+        if: matrix.os.name == 'windows-2019'
+
       - name: Pull Git LFS objects
         run: git lfs pull
         env:
@@ -488,7 +500,7 @@ jobs:
         run: |
           set /p executable=<installer-archive.filename
           "${{ env.CODE_SIGNER_PATH_WIN }}" sign /debug /v /n "Swift Navigation, Inc." /a /tr http://rfc3161timestamp.globalsign.com/advanced /td SHA256 %executable%
-          
+
       - name: Add archive to path.
         shell: bash
         run: |
@@ -500,7 +512,7 @@ jobs:
           path: |
             ${{ env.INSTALLER_ARCHIVE }}
             installer-archive.filename
-  
+
 
   release:
     name: Create Release
