--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -322,7 +322,8 @@ jobs:
       - name: Build ${{ runner.os }} piksi-settings binary.
         run: |
           cargo build --bin piksi-settings --features="env_logger" --release
-        if: matrix.os.name != 'windows-2019'
+        # Building on Mac currently not working (DEVINFRA-612)
+        if: matrix.os.name != 'windows-2019' && matrix.os.name != 'macos-10.15'
 
       - name: Build ${{ runner.os }} piksi-settings binary.
         run: |
@@ -368,11 +369,9 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ runner.os }}-installer
+          name: ${{ runner.os }}-piksi-settings
           path: |
-            ${{ env.INSTALLER_ARCHIVE }}
-            installer-archive.filename
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+            ./target/release/piksi-settings${{ matrix.os.exe_suffix}}
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts-debug
@@ -391,6 +390,25 @@ jobs:
         shell: bash
         run: |
           cargo make disk-usage-bench
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-fileio
+          path: |
+            ./target/release/fileio${{ matrix.os.exe_suffix}}
+        if: matrix.os.name != 'macos-10.15' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-piksi-settings
+          path: |
+            ./target/release/piksi-settings${{ matrix.os.exe_suffix}}
+        if: matrix.os.name != 'macos-10.15' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-installer
+          path: |
+            ${{ env.INSTALLER_ARCHIVE }}
+            installer-archive.filename
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
 
   frontend_bench:
     name: Run Frontend Benchmarks
