--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -188,9 +188,9 @@ jobs:
     strategy:
       matrix:
         os:
-        - {name: ubuntu-18.04, exe_suffix: "" }
-        - {name: macos-10.15, exe_suffix: "" }
-        - {name: windows-2019, exe_suffix: ".exe" }
+        - {name: ubuntu-18.04, exe_suffix: "", short_name: "linux"}
+        - {name: macos-10.15, exe_suffix: "", short_name: "macos"}
+        - {name: windows-2019, exe_suffix: ".exe", short_name: "windows"}
 
     runs-on: ${{ matrix.os.name }}
 
@@ -363,12 +363,12 @@ jobs:
             release-archive.filename
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ runner.os }}-fileio
-          path: ./target/release/fileio${{ matrix.os.exe_suffix}}
+          name: fileio_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+          path: ./target/release/fileio${{ matrix.os.exe_suffix }}
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ runner.os }}-piksi-settings
-          path: ./target/release/piksi-settings${{ matrix.os.exe_suffix}}
+          name: piksi-settings_${{ matrix.os.short_name }}${{ matrix.os.exe_suffix }}
+          path: ./target/release/piksi-settings${{ matrix.os.exe_suffix }}
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts-debug
@@ -537,13 +537,13 @@ jobs:
       - name: Pull Windows fileio
         uses: actions/download-artifact@v2
         with:
-          name: Windows-fileio
-          path: fileio_${{ env.VERSION }}_windows.exe
+          name: fileio_${{ env.VERSION }}_windows.exe
+          path: windows
       - name: Pull Windows piksi-settings
         uses: actions/download-artifact@v2
         with:
-          name: Windows-piksi-settings
-          path: piksi-settings_${{ env.VERSION }}_windows.exe
+          name: piksi-settings_${{ env.VERSION }}_windows.exe
+          path: windows
       - name: Pull Linux Artifacts
         uses: actions/download-artifact@v2
         with:
@@ -552,22 +552,26 @@ jobs:
       - name: Pull Linux fileio
         uses: actions/download-artifact@v2
         with:
-          name: Linux-fileio
-          path: fileio_${{ env.VERSION }}_linux
+          name: fileio_${{ env.VERSION }}_linux
+          path: linux
       - name: Pull Linux piksi-settings
         uses: actions/download-artifact@v2
         with:
-          name: Linux-piksi-settings
-          path: piksi-settings_${{ env.VERSION }}_linux
+          name: piksi-settings_${{ env.VERSION }}_linux
+          path: linux
       - name: Pull macOS Artifacts
         uses: actions/download-artifact@v2
         with:
           name: macOS-installer
           path: |
             macos
-      - name: Store Env Vars
+      - name: Prepare Release
         shell: bash
         run: |
+          mv linux/fileio_linux linux/fileio_${{ env.VERSION }}_linux
+          mv linux/piksi-settings_linux linux/piksi-settings_${{ env.VERSION }}_linux
+          mv windows/fileio_windows.exe windows/fileio_${{ env.VERSION }}_windows.exe
+          mv windows/piksi-settings_windows.exe windows/piksi-settings_${{ env.VERSION }}_windows.exe
           echo "WINDOWS_ARCHIVE=$(cat windows/installer-archive.filename)" >>$GITHUB_ENV
           echo "LINUX_ARCHIVE=$(cat linux/installer-archive.filename)" >>$GITHUB_ENV
           echo "MACOS_ARCHIVE=$(cat macos/installer-archive.filename)" >>$GITHUB_ENV
@@ -577,11 +581,11 @@ jobs:
           name: "${{ env.VERSION }}-${{ env.DATE }}"
           files: |
             windows/${{ env.WINDOWS_ARCHIVE }}
+            windows/fileio_${{ env.VERSION }}_windows.exe
+            windows/piksi-settings_${{ env.VERSION }}_windows.exe
             linux/${{ env.LINUX_ARCHIVE }}
+            linux/fileio_${{ env.VERSION }}_linux
+            linux/piksi-settings_${{ env.VERSION }}_linux
             macos/${{ env.MACOS_ARCHIVE }}
-            fileio_${{ env.VERSION }}_windows.exe
-            fileio_${{ env.VERSION }}_linux
-            piksi-settings_${{ env.VERSION }}_windows.exe
-            piksi-settings_${{ env.VERSION }}_linux
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
